--- a/index.ipynb
+++ b/index.ipynb
@@ -452,13 +452,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "num_of_repeats = len(u)\n",
+    "num_of_repeats = len(unique_countries)\n",
     "num_of_repeats # 3"
    ]
   },
