automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -468,7 +468,7 @@
    ],
    "source": [
     "num_of_repeats = len(unique_countries)\n",
-    "\n",
+    "num of repears = len(countries)\n",
     "num_of_repeats # 3"
    ]
   },
