--- a/index.ipynb
+++ b/index.ipynb
@@ -452,22 +452,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13"
+       "-3"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_of_repeats = len(unique_countries)-len(countries)\n",
+    "num_of_repeats = len(countries)-len(uniqu)\n",
     "num_of_repeats # 3"
    ]
   },
